docker file and docker compose

--- a/Task_Docker/multi_container_app/app/Dockerfile
+++ b/Task_Docker/multi_container_app/app/Dockerfile
@@ -1,16 +1,17 @@
-FROM python:3.8
+# Use the official Python image from the Docker Hub
+FROM python:3.9
 
 # Set the working directory in the container
 WORKDIR /app
 
 # Copy everything including the dependencies file to the working directory
-COPY . /app/
+COPY . /app
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# expose to port 5000
+# expose to port 5000, available to the world outside this container
 EXPOSE 5000
 
-# run the Flask app
-CMD ["python", "docker_app.py"]
+# Run the command to start the Flask app
+CMD ["python", "app.py"]
